crates/inertia-macros/tests/ui/fail/invalid_validator.rs
use inertia_macros::InertiaForm;

#[derive(InertiaForm)]
#[inertia(validator = "magic")]
struct Invalid { value: String }

fn main() {}
