crates/inertia-macros/tests/ui/fail/invalid_validator.stderr
error: invalid inertia validator; expected "garde" or "validator"
 --> tests/ui/fail/invalid_validator.rs:4:23
  |
4 | #[inertia(validator = "magic")]
  |                       ^^^^^^^
